--- a/frontend/src/components/Common/PopUp/index.scss
+++ b/frontend/src/components/Common/PopUp/index.scss
@@ -16,6 +16,9 @@
   width: 100%;
   height: 100%;
   left: 0;
+  max-width: 500px;
+  margin: 0 auto;
+  right: 0;
   transition: opacity 500ms;
   background-color: white;
   -ms-overflow-style: none;
@@ -30,6 +33,8 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
     overflow: scroll;
+    max-width: 500px;
+    margin: 0 auto;
     background-color: rgba(25, 24, 22, 0.5);
     background-repeat: no-repeat;
     background-size: inherit;
@@ -37,18 +42,6 @@
     background-position: -270px 0px;
     height: 100%;
     max-height: 100vh;
-    @media only screen and (min-width: 1800px) and (max-width: 1940px) {
-      background-size: cover;
-      background-position: -470px 0px;
-    }
-    @media only screen and (min-width: 1941px) and (max-width: 3000px) {
-      background-size: cover;
-      background-position: -670px 0px;
-    }
-    @media only screen and (min-width: 3001px) and (max-width: 6144px) {
-      background-size: cover;
-      background-position: -1100px 0px;
-    }
     @media (max-width: 600px) {
       width: 100%;
       background-image: none;
@@ -57,14 +50,14 @@
       display: flex;
       justify-content: center;
       min-height: 100%;
-      width: 75%;
-      background-color: white;
+      width: 100%;
+      background-color: #f1efef;
       overflow: scroll;
       @media (max-width: 1024px) {
         width: 100%;
       }
       .eargo-cybersource-layout-close {
-        position: fixed;
+        position: absolute;
         width: 15px;
         top: 20px;
         right: 20px;
@@ -75,10 +68,20 @@
           align-items: center;
           width: 80%;
           max-width: 400px;
-          padding: 10px 0;
-          margin: auto;
           &.f-column {
             flex-direction: column;
+          }
+          iframe {
+            height: 1000px;
+            max-height: calc(100vh - 40px);
+            box-shadow: none;
+            border: none;
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+          }
+          iframe::-webkit-scrollbar {
+            width: 0px;
+            display: none;
           }
       }
     }
